--- a/Baekjoon/String/11720.md
+++ b/Baekjoon/String/11720.md
@@ -4,5 +4,5 @@
 
 ## 2. 풀이 방법
 - 공백없이 주어진 숫자를 하나씩 읽기
-    -  scanf("%1d", &n);
-    - %ld format string으로 숫자를 하나씩 읽어올 수 있음.
+    - scanf("%1d", &n);
+    - %1d format string으로 숫자를 하나씩 읽어올 수 있음.
