--- a/Baekjoon/String/1152.md
+++ b/Baekjoon/String/1152.md
@@ -10,7 +10,7 @@
 
 
 ## 2. cin.get() 사용
-- <iostream>에 존재
+- iostream에 존재
 - 표준 입력 버퍼에서 문자를 하나만 가져옴.
 - 공백, 개행 포함
 - 문자만 입력 받음.
@@ -72,7 +72,7 @@ int main(void) {
 
 ## 3. cin.getline() 사용
 
-- <iostream>에 존재
+- iostream에 존재
 - cin.getline(변수의 주소, 최대 입력가능 문자 수, 종결 문자)
     > 세번째 인자(종결 문자)는 선택사항
 - 종결 문자를 NULL로 바꿈. 종결 문자 생략시 엔터로 간주.
