--- a/Baekjoon/Graph/1012.md
+++ b/Baekjoon/Graph/1012.md
@@ -166,6 +166,8 @@ q.push(p);
     }
     ```
 
+<br/>
+
 1. main() 함수에서 bfs() 호출
    
    ```c++
@@ -187,7 +189,7 @@ q.push(p);
     - 위의 코드처럼 짜면 이중 for문으로 farm 배열의 전체 원소를 돌면서
     - farm[y][x] == 1인 원소를 찾을 필요X
     - 이미 buf 배열에 farm에서 값이 1인 원소의 위치가 저장되어있으므로
-    - for문 한 번 돌면서 buf 배열에서 배추 위치 하나씩 꺼내서 방문 여부만 체크하고 bfs() 넣어서 탐색하면 됨. 
+    - for문 한 번 돌면서 buf 배열에서 배추 위치 하나씩 꺼내서 방문 여부만 체크하고 bfs()에 넣어서 탐색하면 됨. 
 
 <br/>
 
