--- a/src/Baekjoon/Graph/1012.md
+++ b/src/Baekjoon/Graph/1012.md
@@ -93,7 +93,7 @@ q.push(p);
 
 ## 4. 방향 벡터 사용
 
-- [4963.cpp](./4963.cpp)에서는 if문으로 8가지 방향을 모두 판단했음.
+- [4963.cpp](4963.cpp)에서는 if문으로 8가지 방향을 모두 판단했음.
 
     ```c++
     // 예시
@@ -104,7 +104,7 @@ q.push(p);
     // 이런 if문을 8개 만들어서 8가지 방향을 체크
     // 인덱스만 바뀐 중복 코드가 너무 많았음. -> 코드도 길어짐.
 
-- [1012.cpp](./1012.cpp)에서는 방향 벡터를 이용하여 중복 코드를 없앰.
+- [1012.cpp](1012.cpp)에서는 방향 벡터를 이용하여 중복 코드를 없앰.
 
     ```c++
     // 순서대로 상하좌우 방향
